--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"nprogress": "^0.2.0",
 		"sass": "^1.58.3",
 		"typeit": "^8.7.1",
-		"vitepress": "^1.0.0-rc.20"
+		"vitepress": "^1.3.1"
 	},
 	"type": "module",
 	"keywords": [],
